[package]
name = "async_bench"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flume = "0.10.13"
crossbeam = "0.8.1"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "benchmark"
harness = false
