[package]
name = "async_bench"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flume = "0.10.13"
crossbeam = "0.8.1"
async-barrier = "1.1.0"
parking_lot = "0.12.1"
tokio = { version = "1.19.2", features = ["full"] }

[dependencies.async-std]
version = "1.12.0"
features = ["attributes"]

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "benchmark"
harness = false
